# beedoula

./: .env.example  .gitignore  README.md  langgraph.json  main.py  pyproject.toml  render.yaml  smoke_test_local.py  smoke_test_sdk.py
app/: memory.py  models.py  rag.py  safety.py  tools.py
app/graphs/: agent_with_helpfulness.py  simple_agent.py
data/: family_notes_sample.md
docs/: certification-challenge.md  safety-contract.md
evals/: build_dataset.py  common.py  golden.py  pyproject.toml  run_evals.py  run_safety_evals.py  safety_cases.jsonl
frontend/: package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx
frontend/app/api/[...path]/: route.ts
frontend/components/: chat.tsx
frontend/lib/: messages.ts
tests/: test_safety.py  test_safety_integration.py
