[project]
name = "beedoula-evals"
version = "0.1.0"
description = "Evaluation harness for BeeDoula: RAGAS metrics over a LangSmith dataset, scored against the running agent server."
requires-python = ">=3.13"
dependencies = [
    "langchain>=1.3.0,<2.0.0",
    # The pinned Ragas build imports a legacy Vertex AI module removed in
    # langchain-community 0.4 (same pin as course sessions 5-6).
    "langchain-community==0.3.31",
    "langchain-openai>=1.2.0,<2.0.0",
    "langchain-text-splitters>=1.0.0,<2.0.0",
    "langgraph-sdk>=0.2.0",
    "langsmith>=0.8.0,<0.9.0",
    "instructor>=1.6.0",
    "openai>=1.50.0",
    "pandas>=2.2.0",
    "pymupdf>=1.27.0",
    "tiktoken>=0.12.0",
    "python-dotenv>=1.0.0",
    "ragas @ git+https://github.com/vibrantlabsai/ragas.git@298b68274234c060deacab3cf5fb52aa3a20e885",
    "rapidfuzz>=3.14.5",
]

[tool.uv]
package = false
